// Copyright 2019 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipe_modules.recipe_engine.futures.examples.lottasteps;

message Input {
  // The number of steps the recipe should attempt to launch in parallel.
  int32 num_steps = 1;
}
